# eng-pulse

./: .gitattributes  .gitignore  AGENTS.md  README.md  daily_se_summary.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
apps/daily-agent/: .dockerignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  deploy.sh
apps/daily-agent/src/: eval.rs  feedback.rs  fetcher.rs  main.rs  manifest.rs  prompts.rs
apps/daily-agent/tests/: integration_test.rs
apps/explorer-agent/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  deploy.sh
apps/explorer-agent/src/: main.rs
apps/mobile/: README.md  build.sh  pubspec.yaml
apps/mobile-swift/: .gitignore  FeedbackService.swift  GoogleService-Info.plist.ci  README.md  Secrets.xcconfig.example
apps/mobile-swift/EngPulse/: EngPulseApp.swift  GoogleService-Info.plist  Info.plist  Info.plist.template  Theme.swift
apps/mobile-swift/EngPulse.xcodeproj/: project.pbxproj
apps/mobile-swift/EngPulse/Models/: InsightBrief.swift  Summary.swift  TTSConfiguration.swift
apps/mobile-swift/EngPulse/Services/: APIService.swift  AudioPlayerService.swift  CacheService.swift  CloudTTSService.swift  FeedbackService.swift  LocalTTSService.swift  NotificationService.swift  NowPlayingService.swift  TTSService.swift  TextCleaner.swift
apps/mobile-swift/EngPulse/ViewModels/: DetailViewModel.swift
apps/mobile-swift/EngPulse/Views/: ContentView.swift  DetailView.swift  HomeView.swift  InsightBriefView.swift  MarkdownContentView.swift  SettingsView.swift  SkeletonView.swift  TTSErrorBanner.swift  TTSListenButton.swift  TTSPlayerBarView.swift
apps/mobile-swift/EngPulseTests/: DetailViewModelTests.swift  LocalTTSServiceTests.swift  MarkdownRendererTests.swift  TextCleanerTests.swift
apps/mobile/android/app/: build.gradle.kts
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: firebase_options.dart  firebase_options.dart.ci  main.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/web/: index.html  manifest.json
docs/: AGENTS.md  CLOUD-RUN-WARM-UP-EVALUATION.md
docs/superpowers/plans/: 2026-03-13-prompt-ab-testing.md  2026-03-14-feedback-upload.md  2026-03-15-judge-calibration.md
docs/superpowers/specs/: 2026-03-13-prompt-ab-testing-design.md  2026-03-14-feedback-upload-design.md  2026-03-15-judge-calibration-design.md
eng_pulse_mobile/: README.md  pubspec.yaml
eng_pulse_mobile/android/app/: build.gradle.kts
eng_pulse_mobile/assets/icon/: ICON_SPECS.md
eng_pulse_mobile/ios/Runner/: Info.plist
eng_pulse_mobile/lib/: main.dart
eng_pulse_mobile/lib/models/: cached_summary.dart  cached_summary.g.dart  reading_history.g.dart
eng_pulse_mobile/lib/services/: api_service.dart  cache_service.dart  connectivity_service.dart  notification_service.dart  user_service.dart
eng_pulse_mobile/lib/theme/: app_theme.dart
eng_pulse_mobile/lib/widgets/: shimmer_loading.dart  summary_card.dart
eng_pulse_mobile/linux/runner/: my_application.cc
eng_pulse_mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
eng_pulse_mobile/macos/Runner.xcodeproj/: project.pbxproj
eng_pulse_mobile/test/: widget_test.dart
eng_pulse_mobile/windows/: CMakeLists.txt
functions/apns-notifier/: deploy.sh  main.py  requirements.txt  test_main.py
functions/fcm-tokens/: deploy.sh  main.py  requirements.txt  test_main.py
functions/feedback-receiver/: main.py  requirements.txt  test_main.py
functions/feedback-receiver/shared/: __init__.py  apns_utils.py  http_utils.py  requirements-dev.txt  validation.py
functions/notifier/: README.md  deploy.sh  main.py  requirements-dev.txt  requirements.txt  test_main.py
functions/shared/: __init__.py  conftest.py  firestore_utils.py  http_utils.py  logging_config.py  test_apns_utils.py  test_firestore_utils.py  test_http_utils.py  test_logging_config.py  test_validation.py
gemini-engine/: Cargo.toml  README.md
gemini-engine/src/: lib.rs
libs/gemini-engine/: Cargo.toml  README.md
libs/gemini-engine/src/: lib.rs
libs/llm-client/: Cargo.toml
libs/llm-client/src/: lib.rs
scripts/: convert_opml.py  pre-commit  setup-monitoring.sh  substack_batch.py  substack_to_markdown.py  validate.sh
se-daily-agent/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  deploy.sh
se-daily-agent/src/: fetcher.rs  main.rs
se-daily-notifier/: README.md  deploy.sh  main.py  requirements.txt
se-explorer-agent/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  deploy.sh
se-explorer-agent/src/: main.rs
(+42 files in other folders)
