[package]
name = "gemini-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
tokio = { version = "1", features = ["sync", "time"] } # Minimal tokio for backoff/async