[package]
name = "se-daily-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
readabilityrs = "0.1.0"
# Pin kuchikikiki to avoid edition2024 requirement (0.9.1 requires unstable Rust)
kuchikikiki = "=0.9.0"
rss = "2.0"
chrono = { version = "0.4", features = ["serde"] }
google-cloud-storage = "0.15"
google-cloud-auth = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
gemini-engine = { path = "../gemini-engine" }
