[package]
name = "se-daily-agent"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
wiremock = "0.5"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
readability = { version = "0.3", default-features = false }
url = "2.5"
rss = "2.0"
atom_syndication = "0.12"
chrono = { version = "0.4", features = ["serde"] }
google-cloud-storage = "0.15"
google-cloud-auth = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
gemini-engine = { path = "../../libs/gemini-engine" }
